--- a/Containers/host:minikube/Dockerfile
+++ b/Containers/host:minikube/Dockerfile
@@ -1,5 +1,5 @@
 FROM fedora:27
-LABEL autho="roberto@edt"
+LABEL author="roberto@edt Proyecto kubernetes"
 RUN dnf -y install krb5-workstation passwd cifs-utils authconfig pam_krb5 openssh-clients nss-pam-ldapd procps pam_mount iputils iproute dhclient bind-utils 
 RUN mkdir /opt/docker
 COPY  * /opt/docker/
