--- a/Containers/ldapserver:minikube/Dockerfile
+++ b/Containers/ldapserver:minikube/Dockerfile
@@ -1,10 +1,9 @@
 # Version: 0.0.1
-# @edt M06 2018-2019
-# ldapserver base edt.org
+# ldapserver
 # -------------------------------------
 FROM fedora:27
-LABEL author="@edt ASIX M06 Curs 2018-2019"
-LABEL description="ldapserver edt.org cn dataDB"
+LABEL author="Roberto@edt.org Proyecto Kubernetes"
+LABEL description="ldapserver"
 RUN dnf -y install procps openldap-clients openldap-servers
 RUN mkdir /opt/docker
 COPY * /opt/docker/
