--- a/Containers/ldapserver:minikube/Dockerfile
+++ b/Containers/ldapserver:minikube/Dockerfile
@@ -1,8 +1,9 @@
-# Version: 0.0.1
-# ldapserver
+# Kubernetes
+## @edt ASIX M14-PROJECTE Curs 2019-2020
+## Roberto Altamirano Martinez
 # -------------------------------------
 FROM fedora:27
-LABEL author="Roberto@edt.org Proyecto Kubernetes"
+LABEL author="Roberto@edt Proyecto Kubernetes"
 LABEL description="ldapserver"
 RUN dnf -y install procps openldap-clients openldap-servers
 RUN mkdir /opt/docker
@@ -11,5 +12,4 @@ RUN chmod +x /opt/docker/install.sh /opt/docker/startup.sh
 WORKDIR /opt/docker
 EXPOSE 389
 CMD ["/opt/docker/startup.sh"]
-
 
