--- a/scripts/nfs-service.yaml
+++ b/scripts/nfs-service.yaml
@@ -12,5 +12,15 @@ spec:
     nodePort: 111
     protocol: TCP
     name: nfs-server
+  - port: 2049
+    targetPort: 2049
+    nodePort: 2049
+    protocol: TCP
+    name: nfs-server1
+  - port: 20048
+    targetPort: 20048
+    nodePort: 20048
+    protocol: TCP
+    name: nfs-server2
   selector:
     app: nfs-server
