--- a/scripts/kserver-deployment.yaml
+++ b/scripts/kserver-deployment.yaml
@@ -1,18 +1,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: kserver
+  name: kserver.edt.org
   labels:
-    app: kserver
+    app: kserver.edt.org
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: kserver
+      app: kserver.edt.org
   template:
     metadata:
       labels:
-        app: kserver
+        app: kserver.edt.org
     spec:
       containers:
       - name: kserver
